[package]
name = "crab-gb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game-loop = { version = "1.1.0", features = ["winit"] }
num-derive = "0.4.1"
num-traits = "0.2.17"
pixels = "0.13.0"
winit = { version = "0.29", features = ["rwh_05"] }
